--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -91,7 +91,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -132,7 +132,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -173,7 +173,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -214,7 +214,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -255,7 +255,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -296,7 +296,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -382,7 +382,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -423,7 +423,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -464,7 +464,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -505,7 +505,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -546,7 +546,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -587,7 +587,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -673,7 +673,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -714,7 +714,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -755,7 +755,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -796,7 +796,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -837,7 +837,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
@@ -878,7 +878,7 @@
                                 style=" border:1px solid #000000; padding:3px; 
                                     background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; 
                                     color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" 
-                                tooltip-html-unsafe="{{arraton}}">
+                                tooltip-html-unsafe="{{arratontooltip}}">
 
                                     <span ng-if="orden.badutstock == 0" class="badge glyphicon glyphicon-fire">OJO!</span>
 
