Ordenatzea ahalbideratzeko lanak hasi

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -75,6 +75,7 @@
                                         ng-click="grafikoa(orden.ref)"
                                         ng-bind-html="orden.ref"
                                         ></span>
+                                    <span><button ng-click="ordenatu(orden,-1)">Behera</button></span>
                             </div> <!-- box-of -->
                             <div 
                                 data-fetxa="{{eguna1}}"
